refactor: break heritage between AttenuationOutput and CnossosPath (wip)