@@ -13,7 +13,6 @@ import org.noise_planet.noisemodelling.pathfinder.profilebuilder.CutPointWall;
 import org.noise_planet.noisemodelling.pathfinder.profilebuilder.CutProfile;
 import org.noise_planet.noisemodelling.pathfinder.utils.geometry.JTSUtility;
 import org.noise_planet.noisemodelling.pathfinder.utils.geometry.Orientation;
-import org.noise_planet.noisemodelling.propagation.AttenuationOutput;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,14 +31,14 @@ public class CnossosPathBuilder {
     public static final double ALPHA0 = 2e-4;
     private static final double EPSILON = 1e-7;
 
-    public static void computeRayleighDiff(SegmentPath srSeg, CutProfile cutProfile, AttenuationOutput pathParameters,
+    public static void computeRayleighDiff(SegmentPath srSeg, CutProfile cutProfile, CnossosPath pathParameters,
                                      LineSegment dSR, List<SegmentPath> segments, List<PointPath> points,
                                      List<Coordinate> pts2D, Coordinate[] pts2DGround, List<Integer> cut2DGroundIndex,
                                            List<Double> exactFrequencyArray) {
         final List<CutPoint> cuts = cutProfile.cutPoints;
 
-        Coordinate src = pts2D.get(0);
-        Coordinate rcv = pts2D.get(pts2D.size() - 1);
+        Coordinate src = pts2D.getFirst();
+        Coordinate rcv = pts2D.getLast();
         CutPoint srcCut = cutProfile.getSource();
         CutPoint rcvCut = cutProfile.getReceiver();
         for (int i0Cut = 1; i0Cut < cuts.size() - 1; i0Cut++) {
@@ -194,17 +193,17 @@ public class CnossosPathBuilder {
      * @param gS Ground factor of the source area
      * @return The cnossos path or null
      */
-    public static List<AttenuationOutput> computeCnossosPathsFromCutProfile(CutProfile cutProfile , boolean bodyBarrier, List<Double> exactFrequencyArray, double gS) {
-        List<AttenuationOutput> cnossosPaths = new ArrayList<>();
+    public static List<CnossosPath> computeCnossosPathsFromCutProfile(CutProfile cutProfile , boolean bodyBarrier, List<Double> exactFrequencyArray, double gS) {
+        List<CnossosPath> cnossosPaths = new ArrayList<>();
         if(cutProfile.profileType == CutProfile.PROFILE_TYPE.DIRECT ||
                 cutProfile.profileType == CutProfile.PROFILE_TYPE.REFLECTION) {
-            AttenuationOutput cnossosPath = computeCnossosPathFromCutProfile(cutProfile, bodyBarrier, exactFrequencyArray, gS, false);
+            CnossosPath cnossosPath = computeCnossosPathFromCutProfile(cutProfile, bodyBarrier, exactFrequencyArray, gS, false);
             if(cnossosPath != null) cnossosPaths.add(cnossosPath);
             cnossosPath = computeCnossosPathFromCutProfile(cutProfile, bodyBarrier, exactFrequencyArray, gS, true);
             if(cnossosPath != null) cnossosPaths.add(cnossosPath);
         } else if (cutProfile.profileType == CutProfile.PROFILE_TYPE.LEFT ||
                 cutProfile.profileType == CutProfile.PROFILE_TYPE.RIGHT) {
-            AttenuationOutput cnossosPath = computeCnossosPathFromCutProfile(cutProfile, bodyBarrier, exactFrequencyArray, gS, cutProfile.curvedPath);
+            CnossosPath cnossosPath = computeCnossosPathFromCutProfile(cutProfile, bodyBarrier, exactFrequencyArray, gS, cutProfile.curvedPath);
             if(cnossosPath != null) cnossosPaths.add(cnossosPath);
         }
         return cnossosPaths;
@@ -220,7 +219,7 @@ public class CnossosPathBuilder {
      * @param favourable Compute the favourable contribution for the provided profile
      * @return The cnossos path or null
      */
-    public static AttenuationOutput computeCnossosPathFromCutProfile(CutProfile cutProfile , boolean bodyBarrier, List<Double> exactFrequencyArray, double gS, boolean favourable) {
+    public static CnossosPath computeCnossosPathFromCutProfile(CutProfile cutProfile , boolean bodyBarrier, List<Double> exactFrequencyArray, double gS, boolean favourable) {
         if(favourable &&
                 (cutProfile.profileType == CutProfile.PROFILE_TYPE.LEFT ||
                         cutProfile.profileType == CutProfile.PROFILE_TYPE.RIGHT)
@@ -241,8 +240,8 @@ public class CnossosPathBuilder {
         List<Integer> cut2DGroundIndex = new ArrayList<>(cutProfilePoints.size());
         Coordinate[] pts2DGround = cutProfile.computePts2DGround(cut2DGroundIndex).toArray(new Coordinate[0]);
         double[] meanPlane = JTSUtility.getMeanPlaneCoefficients(pts2DGround);
-        Coordinate firstPts2D = pts2D.get(0);
-        Coordinate lastPts2D = pts2D.get(pts2D.size()-1);
+        Coordinate firstPts2D = pts2D.getFirst();
+        Coordinate lastPts2D = pts2D.getLast();
         SegmentPath srPath = computeSegment(firstPts2D, lastPts2D, meanPlane, cutProfile.getGPath(), cutProfile.getSource().groundCoefficient);
         // Directive 2002/49/EC, section 2.5.3 "Significant heights above the ground":
         // "If the equivalent height of a point becomes negative, i.e. if the point is located
@@ -280,12 +279,11 @@ public class CnossosPathBuilder {
         srPath.setPoints2DGround(pts2DGround);
         srPath.dc = CGAlgorithms3D.distance(cutProfile.getReceiver().getCoordinate(),
                 cutProfile.getSource().getCoordinate());
-        AttenuationOutput cnossosPath = new AttenuationOutput(cutProfile);
+        CnossosPath cnossosPath = new CnossosPath(cutProfile);
         cnossosPath.setFavourable(favourable);
         cnossosPath.setPointList(points);
         cnossosPath.setSegmentList(segments);
         cnossosPath.setSRSegment(srPath);
-        cnossosPath.init(exactFrequencyArray.size());
         List<Coordinate> hullPts2D = pts2D;
         if(favourable) {
             // Compute the altered profile for favourable path
@@ -322,10 +320,10 @@ public class CnossosPathBuilder {
 
                         // Get the direct line altitude from source to receiver at this reflection position
                         // Use ORIGINAL coordinates for the source and receiver
-                        Coordinate srcCoord = cutProfile.cutPoints.get(0).getCoordinate();
-                        Coordinate rcvCoord = cutProfile.cutPoints.get(cutProfile.cutPoints.size() - 1).getCoordinate();
+                        Coordinate srcCoord = cutProfile.cutPoints.getFirst().getCoordinate();
+                        Coordinate rcvCoord = cutProfile.cutPoints.getLast().getCoordinate();
                         double reflectionX = pts2D.get(i).x;
-                        double srcX = pts2D.get(0).x;
+                        double srcX = pts2D.getFirst().x;
                         double rcvX = pts2D.get(cutProfile.cutPoints.size() - 1).x;
                         double t = (reflectionX - srcX) / (rcvX - srcX);
                         double directLineAltitude = srcCoord.z + t * (rcvCoord.z - srcCoord.z);
@@ -410,7 +408,7 @@ public class CnossosPathBuilder {
                 }
                 Orientation emissionDirection = computeOrientation(cutProfile.getSource().orientation,
                         cutProfile.cutPoints.get(i0).getCoordinate(), targetPosition);
-                points.get(0).orientation = emissionDirection;
+                points.getFirst().orientation = emissionDirection;
                 cnossosPath.raySourceReceiverDirectivity = emissionDirection;
                 src = pts2D.get(i0);
             }
@@ -447,11 +445,11 @@ public class CnossosPathBuilder {
             points.add(new PointPath(pts2D.get(i1), cutPt1.getzGround(), RECV));
             if(previousPivotPoint != i0 && i == hullPointsIndices.size() - 1) {
                 // we added segments before i1 vertical plane diffraction point, but it is the last vertical plane
-                // diffraction point and we must add the remaining segment between the last horizontal diffraction point
+                // diffraction point, and we must add the remaining segment between the last horizontal diffraction point
                 // and the last point
                 Coordinate[] segmentGroundPoints = Arrays.copyOfRange(pts2DGround, previousPivotGround, pts2DGround.length);
                 meanPlane = JTSUtility.getMeanPlaneCoefficients(segmentGroundPoints);
-                SegmentPath seg = computeSegment(pts2D.get(previousPivotPoint), pts2D.get(pts2D.size() - 1),
+                SegmentPath seg = computeSegment(pts2D.get(previousPivotPoint), pts2D.getLast(),
                         meanPlane, cutProfile.getGPathByIndex(previousPivotPoint, cutProfile.cutPoints.size() - 1, Scene.DEFAULT_G_BUILDING),
                         gS);
                 seg.setPoints2DGround(segmentGroundPoints);
@@ -470,7 +468,7 @@ public class CnossosPathBuilder {
             path.setPoints2DGround(segmentGroundPoints);
             segments.add(path);
             if (i != hullPointsIndices.size() - 1) {
-                PointPath pt = points.get(points.size() - 1);
+                PointPath pt = points.getLast();
                 pt.type = DIFH;
                 pt.bodyBarrier = bodyBarrier;
                 if(cutPt1 instanceof CutPointWall) {
@@ -483,7 +481,7 @@ public class CnossosPathBuilder {
             return null;
         }
 
-        Coordinate rcv = points.get(points.size()-1).coordinate;
+        Coordinate rcv = points.getLast().coordinate;
         PointPath p0 = points.stream().filter(p -> p.type.equals(DIFH)).findFirst().orElse(null);
         if(p0==null){
             // Direct propagation (no diffraction over obstructing objects)
@@ -514,7 +512,7 @@ public class CnossosPathBuilder {
                 long difVPointCount = cnossosPath.getPointList().stream().
                         filter(pointPath -> pointPath.type.equals(DIFV)).count();
                 double distance = difVPointCount == 0 ? cnossosPath.getSRSegment().d : cnossosPath.getSRSegment().dc;
-                cnossosPath.delta = segments.get(0).d + cnossosPath.e + segments.get(segments.size()-1).d - distance;
+                cnossosPath.delta = segments.getFirst().d + cnossosPath.e + segments.getLast().d - distance;
             } else {
                 segments.addAll(rayleighSegments);
                 points.addAll(1, rayleighPoints);
@@ -528,8 +526,8 @@ public class CnossosPathBuilder {
         }
         Coordinate cn = pn.coordinate;
 
-        SegmentPath seg1 = segments.get(0);
-        SegmentPath seg2 = segments.get(segments.size()-1);
+        SegmentPath seg1 = segments.getFirst();
+        SegmentPath seg2 = segments.getLast();
 
         double dSO0 = seg1.d;
         double dOnR = seg2.d;
